--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,8 @@ body {
   color: #16d9e3;
 }
 
-h1 {
+h1,
+h2 {
   line-height: 1.4;
   font-size: 4rem;
 }
@@ -72,7 +73,8 @@ h1 {
   font-size: 3rem;
 }
 
-.primary {
+.primary,
+.total {
   color: #16d9e3;
 }
 
