--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ h2 {
   margin-top: -100vh;
 }
 
+.hide {
+  display: none;
+}
+
 .time-list {
   display: flex;
   flex-wrap: wrap;
@@ -83,7 +87,7 @@ h2 {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 500px;
+  width: 400px;
   height: 500px;
   background: linear-gradient(118.38deg, #29323c -4.6%, #485563 200.44%);
   box-shadow: -8px -8px 20px #2a333d, 10px 7px 20px #475462;
